[package]
name = "radin-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
reqwest =  {version = "0.12.1" , features = ["json"]}
rocket = "0.5.0"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = {version = "1.36.0" , features = ["full"]}
